--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="nutrio/runtime-es2015.js" type="module"></script><script src="nutrio/runtime-es5.js" nomodule defer></script><script src="nutrio/polyfills-es5.js" nomodule defer></script><script src="nutrio/polyfills-es2015.js" type="module"></script><script src="nutrio/styles-es2015.js" type="module"></script><script src="nutrio/styles-es5.js" nomodule defer></script><script src="nutrio/vendor-es2015.js" type="module"></script><script src="nutrio/vendor-es5.js" nomodule defer></script><script src="nutrio/main-es2015.js" type="module"></script><script src="nutrio/main-es5.js" nomodule defer></script></body>
 </html>
